[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Quizz/QuizzQuestionMaker/QuizzQuestionMaker.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelQuestion" type="Panel" parent="."]
margin_left = 201.505
margin_top = 27.9439
margin_right = 843.505
margin_bottom = 113.944
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="LineEdit" parent="PanelQuestion"]
anchor_left = 0.512
anchor_top = 0.5
anchor_right = 0.512
anchor_bottom = 0.5
margin_left = -175.893
margin_top = -18.2245
margin_right = 33.1069
margin_bottom = 5.7755
rect_scale = Vector2( 1.76, 2.12 )

[node name="Questions" type="Label" parent="PanelQuestion"]
margin_left = 252.437
margin_top = 6.36396
margin_right = 412.437
margin_bottom = 20.364
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "INSERT YOUR QUESTION:"

[node name="PanelAnswers" type="Panel" parent="."]
margin_left = 122.225
margin_top = 140.317
margin_right = 918.225
margin_bottom = 407.317
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="LineEdit" parent="PanelAnswers"]
margin_left = 69.128
margin_top = 38.4853
margin_right = 355.128
margin_bottom = 111.485
rect_pivot_offset = Vector2( 143, 36.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="LineEdit" parent="PanelAnswers"]
margin_left = 457.852
margin_top = 37.5595
margin_right = 714.852
margin_bottom = 112.56
rect_pivot_offset = Vector2( -269.949, -146.871 )

[node name="Answer3" type="LineEdit" parent="PanelAnswers"]
margin_left = 67.0
margin_top = 140.0
margin_right = 357.0
margin_bottom = 215.0

[node name="Answer4" type="LineEdit" parent="PanelAnswers"]
margin_left = 464.0
margin_top = 137.0
margin_right = 717.0
margin_bottom = 213.0

[node name="Answers" type="Label" parent="PanelAnswers"]
margin_left = 333.047
margin_top = 8.48528
margin_right = 493.047
margin_bottom = 22.4853
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "INSERT YOUR ANSWERS:"

[node name="OptionButton" type="OptionButton" parent="PanelAnswers"]
margin_left = 37.0
margin_top = 356.0
margin_right = 181.0
margin_bottom = 379.0
text = "1"
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null, "4", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answers2" type="Label" parent="PanelAnswers"]
margin_left = 32.1598
margin_top = 307.254
margin_right = 192.16
margin_bottom = 321.254
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "RIGHT ANSWER:"

[node name="Answers5" type="Label" parent="PanelAnswers"]
margin_left = 422.704
margin_top = 60.5511
margin_right = 438.704
margin_bottom = 89.5511
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answers6" type="Label" parent="PanelAnswers"]
margin_left = 423.742
margin_top = 162.421
margin_right = 439.742
margin_bottom = 191.421
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "4:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answers4" type="Label" parent="PanelAnswers"]
margin_left = 27.5135
margin_top = 168.168
margin_right = 43.5135
margin_bottom = 197.168
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "3:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answers3" type="Label" parent="PanelAnswers"]
margin_left = 28.5946
margin_top = 64.1784
margin_right = 44.5946
margin_bottom = 93.1784
rect_pivot_offset = Vector2( -364.831, 124.149 )
text = "1:"

[node name="AddQuestionButton" type="Button" parent="."]
margin_left = 434.673
margin_top = 467.43
margin_right = 616.673
margin_bottom = 531.43
rect_pivot_offset = Vector2( -916.465, -271.94 )
text = "ADD QUESTION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSetText" type="LineEdit" parent="."]
margin_left = 825.169
margin_top = 449.802
margin_right = 921.169
margin_bottom = 492.802
rect_pivot_offset = Vector2( 143, 36.5 )
text = "Set Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSetButton" type="Button" parent="."]
margin_left = 807.137
margin_top = 507.921
margin_right = 939.137
margin_bottom = 565.921
text = "ADD SET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 20.9763
margin_top = 14.9831
margin_right = 101.976
margin_bottom = 71.9831
text = "EXIT"

[connection signal="pressed" from="AddQuestionButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AddSetButton" to="." method="_on_AddSetButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
